fix:nav의 z-index 높임

--- a/src/components/DesktopNav/DesktopNav.scss
+++ b/src/components/DesktopNav/DesktopNav.scss
@@ -10,6 +10,7 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2000;
 
     .navTop {
       width: 100%;
